Fix playback of recordings not loading on firefox mobile
The event "loadeddata" is only triggered on firefox mobile once the
video/audio is played, so it requires the user to click on the play button
for it to be triggered.
The playback page was waiting for the event to be triggered before
removing the "loading" page, and that would never happen on firefox mobile.

Now we don't wait anymore for the video to be loaded, we just wait for
the slides and the initial setup.

--- a/record-and-playback/presentation/playback/presentation/0.9.0/playback.css
+++ b/record-and-playback/presentation/playback/presentation/0.9.0/playback.css
@@ -259,6 +259,7 @@ body {
 .left-off-canvas-menu {
   background: #fff;
   width: 13rem;
+  border-right: 1px solid #e2e2e2;
 }
 .move-right > .inner-wrap {
   -webkit-transform: translate3d(13rem, 0, 0);
@@ -300,7 +301,7 @@ ul.off-canvas-list li label {
 /* Small screens only */
 @media only screen and (max-width: 40em) {
   #copyright {
-    font-size: 0.5em;
+    font-size: 0.6rem;
   }
   #chat {
     font-size: 12px;
